[gd_scene load_steps=16 format=3 uid="uid://bvodoiexvp2co"]

[ext_resource type="Script" path="res://scripts/cow.gd" id="1_kw7or"]
[ext_resource type="Texture2D" uid="uid://btwbdvfoime66" path="res://entity/cow/cow.png" id="2_s1rmo"]
[ext_resource type="PackedScene" uid="uid://dyg0jbsryofkx" path="res://components/detection_area.tscn" id="4_k0v6w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psrwj"]
size = Vector2(5.00001, 21)

[sub_resource type="Animation" id="Animation_0dt42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n7rr0"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2]
}

[sub_resource type="Animation" id="Animation_doiqd"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsotg"]
_data = {
"RESET": SubResource("Animation_0dt42"),
"idle": SubResource("Animation_n7rr0"),
"walk": SubResource("Animation_doiqd")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hr22q"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2gfpm"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t68m2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1bsbm"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_db0nd"]
states/idle/node = SubResource("AnimationNodeAnimation_hr22q")
states/idle/position = Vector2(315, 100)
states/walk/node = SubResource("AnimationNodeAnimation_2gfpm")
states/walk/position = Vector2(436, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_t68m2"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_1bsbm")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_re6n7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7scgb"]
radius = 18.0

[node name="cow" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_kw7or")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-1.50001, 10.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_psrwj")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 12)
texture = ExtResource("2_s1rmo")
offset = Vector2(0, -13)
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xsotg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_db0nd")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_re6n7")

[node name="WanderTimer" type="Timer" parent="."]

[node name="detection_area" parent="." instance=ExtResource("4_k0v6w")]
visible = false
position = Vector2(-11, -3)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="detection_area" index="0"]
position = Vector2(12, 7)
shape = SubResource("CircleShape2D_7scgb")

[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]

[editable path="detection_area"]
